k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fms-prod-database
  namespace: fms-prod
  labels:
    app: fms-prod-database
spec:
  replicas: 1 # !Change to your desired number of replicas
  selector:
    matchLabels:
      app: fms-prod-database
  template:
    metadata:
      labels:
        app: fms-prod-database
    spec:
      containers:
        - name: postgres
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: logs
              mountPath: /var/log/postgresql
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          # !Change to your desired CPU and memory requests/limits
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: fms-prod-database-data
        - name: logs
          persistentVolumeClaim:
            claimName: fms-prod-database-logs

---
apiVersion: v1
kind: Service
metadata:
  name: fms-prod-database
  namespace: fms-prod
spec:
  type: ClusterIP
  selector:
    app: fms-prod-database
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
