k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fms-prod-redis
  namespace: fms-prod
  labels:
    app: fms-prod-redis
spec:
  replicas: 1 # !Change to your desired number of replicas
  selector:
    matchLabels:
      app: fms-prod-redis
  template:
    metadata:
      labels:
        app: fms-prod-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          command:
            - redis-server
            - --appendonly
            - "yes"
            - --maxmemory
            - 512mb
            - --maxmemory-policy
            - allkeys-lru
          ports:
            - containerPort: 6379
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
            - name: logs
              mountPath: /var/log/redis
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
          # !Change to your desired CPU and memory requests/limits
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 768Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: fms-prod-redis-data
        - name: logs
          persistentVolumeClaim:
            claimName: fms-prod-redis-logs

---
apiVersion: v1
kind: Service
metadata:
  name: fms-prod-redis
  namespace: fms-prod
spec:
  type: ClusterIP
  selector:
    app: fms-prod-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
