k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fms-prod-ingress
  namespace: fms-prod
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: fms.prod.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fms-prod-proxy
                port:
                  number: 80
